# powertweak-0.99.5

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in  mkinstalldirs  powertweak.xpm  tweaks
Documentation/: FAQ  Sponser.txt  support.txt
Documentation/Hackers/: pci.sgml  plugin.sgml
autom4te.cache/: output.0  traces.0
distro/Caldera/: powertweak.spec.in  powertweakd.init
distro/Redhat/: configure.diff  powertweak.desktop  powertweak.spec.in  powertweakd.init
distro/SuSE/: README.SuSE  powertweak.spec  rc.config.powertweakd  rc.powertweakd
distro/debian/: README.Debian  changelog  control  copyright  postrm  powertweak-extra.dirs  powertweak-extra.files  powertweak-extra.postinst  powertweak-extra.postrm  powertweak-gtk.8x  powertweak-gtk.dirs  powertweak-gtk.files  powertweak-gtk.menu  powertweak-text.8  powertweak-text.menu  powertweakd.8  powertweakd.conffiles  powertweakd.config  powertweakd.default  powertweakd.dirs  powertweakd.docs  powertweakd.files  powertweakd.init  powertweakd.postinst  powertweakd.preinst  powertweakd.templates  rules
distro/debian/po/: POTFILES.in  de.po  templates.pot
src/: Makefile.am  Makefile.in
src/GTK/: Makefile.am  Makefile.in  about.c  filesel.c  filesel.h  gtkgui.c  gtkgui.h  loadprofile.c  mainwindow.c  menus.c  no.xpm  tab.c  tree.c  widgetvalues.c  yes.xpm
src/backends/: Makefile.am  Makefile.in
src/backends/CDROM/: Makefile.am  Makefile.in  cdrom.h  cdromtweaks.c
src/backends/CPU/: Makefile.am  Makefile.in  cpu.c  cpu.h
src/backends/CPU/x86/: Makefile.am  Makefile.in  cpuid.c  cputweaks.c  identify-AMD.c  identify-Cyrix.c  identify-IDT.c  identify-Intel.c  identify-Rise.c  identify-Transmeta.c  identify.c  info-page.c  msr.c  mtrr.c  x86.h  xml.c
src/backends/CPU/x86/PowerNow/: Makefile.am  Makefile.in  amdk6plus.c  powernow.c  powernow.h
src/backends/DMI/: Makefile.am  Makefile.in  dmi-utils.c  dmi.c  dmi.h  dmitweaks.c  table-0x0.c  table-0x1.c  table-0x17.c  table-0x3.c  table-0x4.c  table-0x5.c  table-0x6.c  table-0x7.c  table-0x9.c
src/backends/Elevator/: Makefile.am  Makefile.in  elevator.h  elevatortweaks.c
src/backends/PCI/: Makefile.am  Makefile.in  i850.c  info-page.c  latency.c  pci.c  pci.h  xml.c
src/backends/client/: Makefile.am  Makefile.in  client-utils.c  client.c  methods.c
src/backends/core/: Makefile.am  Makefile.in
src/backends/core/PCILIB/: Makefile.am  Makefile.in  access.c  common.c  filter.c  generic.c  internal.h  names.c  plugin.c  proc.c
src/backends/hdparm/: Makefile.am  Makefile.in  atacmds.c  atacmds.h  hdparm.c  hdparm.h  info.c  smart.c  smart.h  tweaks.c
src/backends/proc/: Makefile.am  Makefile.in  methods.c  proc.c  proc.h  proctweaks.c  xml.c
src/backends/proc/misc/: Makefile.am  Makefile.in  shm.c
src/backends/sonypi/: Makefile.am  Makefile.in  sonypi.h  sonypitweaks.c
src/client/: Makefile.am  Makefile.in  lspowertweak.c
src/daemon/: Makefile.am  Makefile.in  daemon.c  server.c  server.h  utils.c  utils.h
src/include/: Makefile.am  Makefile.in  client-utils.h  client.h  config.h.in  cvsversion.h  header.h  libxmlcompat.h  macros.h  messages.h  pci.h  pciconfig.h  pciutils.h  powertweak.h  ptxml.h  values.h
src/libpowertweak/: Makefile.am  Makefile.in  config.c  libpowertweak.c  logfile.c  misc.c  plugin.c  profile.c  register.c  socketlib.c  values.c
src/textmode/: Makefile.am  fixup.cc  leftwindow.cc  leftwindow.h  main.cc  outline.h  ptcheckbox.cc  ptcheckbox.h  ptradiobutton.cc  ptradiobutton.h  ptspinbox.cc  ptspinbox.h  pttext.cc  pttext.h  rightwindow.cc  rightwindow.h  scrldlg.cpp  textmode.h  toutline.cc
src/textmode/tvision/: Makefile.am
src/textmode/tvision/classes/: Makefile.am  bc.cc  gkey.cc  gkey2.cc  histlist.cc  msgbox.cc  names.cc  newstr.cc  opstream.cc  tapplica.cc  tchdirdi.cc  tclrdisp.cc  tdirlist.cc  tdisplay.cc  tevent.cc  tfilecol.cc  tfiledia.cc  tfileinf.cc  tfileinp.cc  tfilelis.cc  tfilterv.cc  tframe.cc  thwmouse.cc  ticks.cc  tindicat.cc  tinputli.cc  tnscolle.cc  tpalette.cc  tparamte.cc  tprogram.cc  trangeva.cc  tscreen.cc  tsortedl.cc  tstatusl.cc  ttermina.cc  tview.cc  tvtext1.cc
src/textmode/tvision/include/: collectn.h  colorsel.h  configtv.h  filedlg.h  gkey.h  intl.h  keysym.h  screen.h  strncoll.h  tv.h  tvconfig.h  tvutil.h  validate.h
xml/: Makefile.am  Makefile.in
xml/cpu/: Makefile.am  Makefile.in  cpuindex.dtd  index.xml
xml/cpu/x86/: AMD-Athlon.xml  AMD-K5.xml  AMD-K6-2.xml  AMD-K6-3+.xml  AMD-K6-3.xml  Makefile.am  Makefile.in  Pentium-MMX.xml  PentiumIII.xml  PentiumIV.xml  x86.dtd
xml/pci/: Makefile.am  Makefile.in  pci.dtd
xml/pci/ALI/: M1541.xml  M5243.xml  Makefile.am  Makefile.in
xml/pci/Cypress/: CY82C693U.xml  Makefile.am  Makefile.in
xml/pci/DEC/: 21050.xml  Makefile.am  Makefile.in
xml/pci/Intel/: 82371AB-PIIX4-0.xml  82371AB-PIIX4-1.xml  82424.xml  82430.xml  82434.xml  82437-FX.xml  82437-VX.xml  82439-HX.xml  82439-TX.xml  82441-FX.xml  82443-BX-NOAGP.xml  82443-BX.xml  82443-LX.xml  Makefile.am  Makefile.in
xml/pci/UMC/: 8891A.xml  Makefile.am  Makefile.in
xml/pci/VIA/: 82C586-0.xml  82C586-1.xml  82C597-0.xml  82C597-1.xml  82C598-0.xml  82C598-1.xml  82C686.xml  82C686A-2.xml  82C686A.xml  82C691.xml  Makefile.am  Makefile.in
xml/pci/Yamaha/: Makefile.am  Makefile.in  ymf744b.xml
xml/proc/: Makefile.am  Makefile.in  cdrom.xml  combotest.xml  filesystems.xml  kernel.xml  kernel24.xml  kernel25.xml  memory.xml  netdev.xml  networking.xml  proc.dtd  proc.xml  raid.xml  tuxwebserv.xml
xml/profile/: Makefile.am  Makefile.in  gigabit.xml  laptop.xml  network-compat.xml  nfs.xml  oracle.xml  profile.dtd  router.xml  tuxwebserv.xml  webserver.xml
