INCLUDES =

libexecdir = $(libdir)/powertweak/plugins

CFLAGS += -pedantic 

libexec_LTLIBRARIES = libdmitweaks.la

libdmitweaks_la_SOURCES = \
	dmitweaks.c \
	dmi.c \
	dmi-utils.c \
	table-0x0.c \
	table-0x1.c \
	table-0x3.c \
	table-0x4.c \
	table-0x5.c \
	table-0x6.c \
	table-0x7.c \
	table-0x9.c \
	table-0x17.c
